# Tiff-Image

./: .clang-format  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
doc-html/: TiffWriter-diagram.html
doc-html/_sources/: FeatureSupport.rst.txt
doc-src/: make.bat
doc-src/html/: _image_container_8hpp_source.html  _test_r_g_b_images_8hpp_source.html  class_gray_image.html  class_image_container.html  class_little_endian___t_i_f_f.html  class_r_g_b_image.js  class_t_i_f_f_header.html  class_tiff_i_f_d.html  class_tiff_read_strips.html  class_tiff_read_strips___r_g_b-members.html  class_tiff_read_strips___r_g_b.html  class_tiff_reader-members.html  class_tiff_write_data.js  class_tiff_writer_header-members.html  concept_iterable.html  concepts.html  concepts.js  dir_3bf9da16c5f898b80f45f16c379ffa4a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b524359cec6b9a85a906d2e06446a3a2.html  doxygen_crawl.html  files.html  functions.html  hierarchy.html  hierarchy.js  struct_tag_type_value_3_01_tiff_tag_type_1_1_compression_01_4.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_image_length_01_4.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_strip_offsets_01_4-members.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_x_resolution_01_4-members.html  structvector__element.html  tiff-data_8hpp_source.html  tiff-reader_8hpp_source.html  tiff-types_8hpp_source.html  tiff__writer-image_8hpp_source.html
doc-src/xml/: Doxyfile.xml  _file_reader_8cpp.xml  _test_abstract_image_8hpp.xml  _test_r_g_b_images_8cpp.xml  class_bitlevel_image.xml  class_image_container.xml  class_test_image_single_color.xml  class_tiff_read_strips___r_g_b.xml  class_tiff_write_data.xml  class_tiff_writer_header.xml  concept_iterable.xml  dir_6ddc509b8b38759a20dec5cad25f05d6.xml  dir_b524359cec6b9a85a906d2e06446a3a2.xml  index.xml  struct_tag_type_value_3_01_tiff_tag_type_1_1_compression_01_4.xml  struct_tag_type_value_3_01_tiff_tag_type_1_1_image_width_01_4.xml  struct_tag_type_value_3_01_tiff_tag_type_1_1_x_resolution_01_4.xml  struct_tag_type_value_3_01_tiff_tag_type_1_1_y_resolution_01_4.xml  struct_tiff_tag.xml  struct_tiff_write_data_1_1less__tiff.xml  structis__integral__vector_3_01std_1_1vector_3_01_t_01_4_01_4.xml  structvector__element.xml  structvector__element_3_01std_1_1vector_3_01_t_01_4_01_4.xml  tiff-data-variant_8hpp.xml  tiff-header_8hpp.xml  tiff-writer-header_8hpp.xml  tiff__writer-image_8hpp.xml
docs/: .buildinfo  Doxyfile  TiffReader-diagram.html  TiffWriter-diagram.html  code-classes.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs-src/html/: _file_reader_8hpp_source.html  _image_solid_color_8hpp_source.html  _test_abstract_image_8hpp_source.html  annotated.html  class_bitlevel_image-members.html  class_gray_image-members.html  class_image_solid_color.html  class_r_g_b_image-members.html  class_test_abstract_image.js  class_test_image_ramp_r_g_b-members.html  class_test_image_ramp_r_g_b.js  class_test_image_single_color-members.html  class_test_image_single_color.html  class_tiff_read_strips-members.html  class_tiff_reader.html  class_tiff_write_data.html  class_tiff_writer-members.html  class_tiff_writer.html  class_virtual_endian_handler-members.html  classes.html  concept_iterable_size.html  concept_sizeable.html  dir_3bf9da16c5f898b80f45f16c379ffa4a.js  dir_6ddc509b8b38759a20dec5cad25f05d6.js  dir_7bc4c60d5477c62c61ab7a7de06978cc.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.js  endian_handler_8hpp_source.html  functions_func.html  index.html  struct_tag_type_value.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_image_length_01_4-members.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_image_width_01_4-members.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_image_width_01_4.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_strip_offsets_01_4.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_x_resolution_01_4.html  struct_tag_type_value_3_01_tiff_tag_type_1_1_y_resolution_01_4-members.html  struct_tiff_tag-members.html  struct_tiff_tag_read-members.html  struct_tiff_write_data_1_1less__tiff.html  (+4 more)
docs-src/latex/: _image_container_8hpp_source.tex  _image_solid_color_8hpp_source.tex  _test_abstract_image_8hpp_source.tex  _test_r_g_b_images_8hpp_source.tex  annotated.tex  class_bitlevel_image.eps  class_bitlevel_image.tex  class_gray_image.eps  class_gray_image.tex  class_image_container.tex  class_image_solid_color.tex  class_little_endian___t_i_f_f.eps  class_r_g_b_image.eps  class_r_g_b_image.tex  class_t_i_f_f_header.tex  class_test_abstract_image.tex  class_test_image_single_color.eps  class_test_image_single_color.tex  class_tiff_i_f_d.tex  class_tiff_read_strips.eps  class_tiff_read_strips.tex  class_tiff_read_strips___r_g_b.eps  class_tiff_read_strips___r_g_b.tex  class_tiff_reader.tex  class_tiff_write_data.tex  class_tiff_writer.tex  class_tiff_writer_header.tex  concept_sizeable.tex  endian_handler_8hpp_source.tex  files.tex  hierarchy.tex  refman.tex  struct_tag_type_value.tex  struct_tag_type_value_3_01_tiff_tag_type_1_1_compression_01_4.tex  struct_tag_type_value_3_01_tiff_tag_type_1_1_photometric_interpretation_01_4.tex  struct_tag_type_value_3_01_tiff_tag_type_1_1_y_resolution_01_4.tex  struct_tiff_tag.tex  struct_tiff_tag_read.tex  struct_tiff_write_data_1_1less__tiff.tex  structis__integral__vector_3_01std_1_1vector_3_01_t_01_4_01_4.tex  (+11 more)
docs-src/source/: FeatureSupport.rst  TiffReader-diagram.rst  TiffWriter-diagram.rst  conf.py  index.rst
docs-src/xml/: _file_reader_8hpp.xml  _image_container_8cpp.xml  _image_container_8hpp.xml  class_gray_image.xml  (+14 more)
src/: ImageContainer.cpp  ImageContainer.hpp  ImageSolidColor.hpp  endianHandler.cpp  endianHandler.hpp  main.cpp  tiff-data.hpp  tiff-header.hpp
test/: CMakeLists.txt
test/data/: out.tif  test.tif
test/src/test-helpers/: libtiff_wrapper.hpp  opencv-init.hpp  test-init-methods.hpp
test/src/tests/: test_compression.cpp  test_image_container.cpp  test_metadata.cpp  test_ramp_image.cpp  test_read.cc  test_rgb.cpp
(+97 files in other folders)
